fixed image alignment bug, added new admin nav links

--- a/public/css/admin/items.less
+++ b/public/css/admin/items.less
@@ -100,7 +100,7 @@
                     img {
                         float: left;
                         margin: 5px;
-                        max-width: 49%;
+                        max-width: 47%;
                         max-height: 40%;
                     }
                 }
